--- a/designer/gobang_ui.ui
+++ b/designer/gobang_ui.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>GobangWindow</class>
+ <widget class="QMainWindow" name="GobangWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -42,11 +42,11 @@
      <string notr="true">border-image: url(:/bg/image/chessboard.png);</string>
     </property>
    </widget>
-   <widget class="QWidget" name="black" native="true">
+   <widget class="QWidget" name="ChessCan" native="true">
     <property name="geometry">
      <rect>
       <x>1030</x>
-      <y>720</y>
+      <y>610</y>
       <width>220</width>
       <height>220</height>
      </rect>
@@ -58,10 +58,10 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>1055</x>
-      <y>471</y>
-      <width>151</width>
-      <height>121</height>
+      <x>1020</x>
+      <y>410</y>
+      <width>231</width>
+      <height>131</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -78,9 +78,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>1100</x>
-      <y>480</y>
-      <width>211</width>
+      <x>1060</x>
+      <y>420</y>
+      <width>161</width>
       <height>20</height>
      </rect>
     </property>
@@ -90,14 +90,14 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>五子棋</string>
+     <string>五子棋（双人对战）</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>1070</x>
-      <y>510</y>
+      <x>1030</x>
+      <y>450</y>
       <width>111</width>
       <height>18</height>
      </rect>
@@ -114,8 +114,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>1070</x>
-      <y>540</y>
+      <x>1030</x>
+      <y>480</y>
       <width>161</width>
       <height>18</height>
      </rect>
@@ -147,13 +147,13 @@ p, li { white-space: pre-wrap; }
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>1070</x>
-      <y>570</y>
-      <width>161</width>
-      <height>18</height>
+      <x>1030</x>
+      <y>510</y>
+      <width>211</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="font">
@@ -162,7 +162,110 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>轮到你了！</string>
+     <string>当前棋手：黑棋</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser_2">
+    <property name="geometry">
+     <rect>
+      <x>1020</x>
+      <y>140</y>
+      <width>231</width>
+      <height>191</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(255, 255, 255, 150);</string>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'SimSun'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:10.8pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="yeildBtn">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>200</y>
+      <width>71</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>认输</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="restartBtn">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>240</y>
+      <width>71</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>重新开始</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="retractBtn">
+    <property name="geometry">
+     <rect>
+      <x>1150</x>
+      <y>200</y>
+      <width>71</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>悔棋</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="storeBtn">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>280</y>
+      <width>71</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>保存棋局</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="loadBtn">
+    <property name="geometry">
+     <rect>
+      <x>1150</x>
+      <y>280</y>
+      <width>71</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>导入棋局</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>1080</x>
+      <y>160</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>用户可选操作</string>
     </property>
    </widget>
   </widget>
