--- a/designer/start_ui.ui
+++ b/designer/start_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>453</width>
-    <height>242</height>
+    <width>442</width>
+    <height>207</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="startButton">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>150</y>
+      <x>160</x>
+      <y>130</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QComboBox" name="combBox">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>90</y>
+      <x>90</x>
+      <y>80</y>
       <width>87</width>
       <height>22</height>
      </rect>
@@ -49,12 +49,17 @@
       <string>围棋</string>
      </property>
     </item>
+    <item>
+     <property name="text">
+      <string>黑白棋</string>
+     </property>
+    </item>
    </widget>
    <widget class="QLabel" name="label_chess">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>70</y>
+      <x>90</x>
+      <y>60</y>
       <width>45</width>
       <height>15</height>
      </rect>
@@ -66,8 +71,8 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>30</y>
+      <x>30</x>
+      <y>20</y>
       <width>381</width>
       <height>161</height>
      </rect>
@@ -86,8 +91,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLineEdit" name="sizeInput">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>90</y>
+      <x>240</x>
+      <y>80</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -96,8 +101,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_size">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>70</y>
+      <x>240</x>
+      <y>60</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -118,7 +123,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>453</width>
+     <width>442</width>
      <height>26</height>
     </rect>
    </property>
